bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: ';' expected but string literal found.
 } else if (litMessage()) == "L"{
                             ^